fixed left gap

--- a/frontend/src/Pages/Dashboard/Dashboard.css
+++ b/frontend/src/Pages/Dashboard/Dashboard.css
@@ -4,6 +4,7 @@
 
 .patient-list .header .section {
     display: flex;
+    margin-left: 5%;
 }
 
 .section {
