--- a/frontend/src/Steps/Controller/Controller.css
+++ b/frontend/src/Steps/Controller/Controller.css
@@ -1,4 +1,4 @@
-.content {
+.controller-content {
     flex-grow: 1;
-    margin-left: 10px;
+    margin-left: 15px;
 }
